Replace hand-rolled benchmarks with JMH for msgpack-jackson3
The previous Benchmarker/System.nanoTime() approach had no forking, no
dead-code elimination (Blackhole), and no JIT-aware warmup, producing
~25ms stdev results. Replace with proper JMH benchmarks modelled on
https://github.com/FasterXML/jackson-benchmarks.

Changes:
- Add sbt-jmh 0.4.7 plugin; enable JmhPlugin on msgpack-jackson3
- Add --add-opens JVM args for forked JMH processes (required for
  msgpack-core's Unsafe usage)
- Remove commons-math3 test dependency (no longer needed)
- Delete Benchmarker, MessagePackDataformatPojoBenchmarkTest,
  MessagePackDataformatHugeDataBenchmarkTest
- Add src/jmh/java benchmark sources:
  * model/: MediaItem, MediaContent, Image, Size, Player, MediaItems
    (canonical jvm-serializers dataset, same as jackson-benchmarks)
  * BenchmarkState: pre-serialized bytes + ObjectMapper instances
  * MsgpackReadBenchmark: readPojoMsgpack / readPojoJson
  * MsgpackWriteBenchmark: writePojoMsgpack / writePojoJson
  * NopOutputStream: /dev/null sink for write benchmarks

Run: ./sbt "msgpack-jackson3/jmh:run"
Smoke-test: ./sbt 'msgpack-jackson3/jmh:run -f 1 -wi 1 -i 1'